--- a/show-init-log.html
+++ b/show-init-log.html
@@ -23,6 +23,7 @@
         // show kconsole
         $('#kConsoleShowHideBtn').click();
         
+        let timeStart = Date.now();
         Dynamsoft.BarcodeScanner.createInstance({
             onFrameRead: results => {console.log(results);},
             onUnduplicatedRead: (txt, result) => {alert(txt);}
@@ -30,6 +31,7 @@
             barcodeScanner = scanner;
             barcodeScanner.show().then(() => {
             	// hide immediately to stop too many logs
+                kConsoleLog("init-wasm + ask-video time cost (include the time wait for camera permission): "+(Date.now() - timeStart));
             	barcodeScanner.hide();
             });
         });
