--- a/testBasic/index.html
+++ b/testBasic/index.html
@@ -4,16 +4,17 @@
     <!-- Please visit https://www.dynamsoft.com/CustomerPortal/Portal/TrialLicense.aspx to get a trial license. -->
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@7.2.3-v2/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
     <script>
-        let barcodeScanner = null;
+        let scanner = null;
         Dynamsoft.BarcodeScanner.createInstance({
             onFrameRead: results => {console.log(results);},
             onUnduplicatedRead: (txt, result) => {alert(txt);}
-        }).then(scanner => {
-            barcodeScanner = scanner;
-            return barcodeScanner.show();
+        }).then(s => {
+            scanner = s;
+            scanner.updateVideoSettings({video:true});
+            return scanner.show();
         }).catch(async ex=>{
             alert(ex.message||ex);
-            alert("camerainfos: "+JSON.stringify(await barcodeScanner.getAllCameras()));
+            alert("camerainfos: "+JSON.stringify(await scanner.getAllCameras()));
         });
     </script>
 </body>
