--- a/testBasic/index.html
+++ b/testBasic/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <!-- Please visit https://www.dynamsoft.com/CustomerPortal/Portal/TrialLicense.aspx to get a trial license. -->
-    <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@7.2.3-v2/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
+    <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20200108.0/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
     <script>
         let scanner = null;
         Dynamsoft.BarcodeScanner.createInstance({
@@ -10,8 +10,7 @@
             onUnduplicatedRead: (txt, result) => {alert(txt);}
         }).then(async s => {
             scanner = s;
-            await scanner.updateVideoSettings({ video: true });
-            return scanner.show();
+            await scanner.show();
         }).catch(async ex=>{
             alert(ex.message||ex);
             alert("camerainfos: "+JSON.stringify(await scanner.getAllCameras()));
