--- a/testBasic/onlyvideo.html
+++ b/testBasic/onlyvideo.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <meta charset="utf8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <body>
     <!-- Please visit https://www.dynamsoft.com/CustomerPortal/Portal/TrialLicense.aspx to get a trial license. -->
-    <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20200110.0/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
+    <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20200113.0/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
     <script>
         let scanner = null;
         Dynamsoft.BarcodeScanner.createInstance({
