--- a/testBasic/index.html
+++ b/testBasic/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
     <meta charset="utf8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
 <body>
     <!-- Please visit https://www.dynamsoft.com/CustomerPortal/Portal/TrialLicense.aspx to get a trial license. -->
     <script src="https://cdn.jsdelivr.net/npm/keillion-dynamsoft-javascript-barcode@0.20200114.0/dist/dbr.js" data-productKeys="PRODUCT-KEYS"></script>
