--- a/redmi6A/8.1.3/dm.html
+++ b/redmi6A/8.1.3/dm.html
@@ -45,7 +45,7 @@
                 }
             };
             scanner.onUnduplicatedRead = (txt, result) => {
-                //alert(result.barcodeFormatString + ': ' + txt);
+                alert(result.barcodeFormatString + ': ' + txt);
             };
             scanner.onPlayed = async({width,height})=>{
                 // scan a square area
