--- a/redmi6A/8.1.3/oned.html
+++ b/redmi6A/8.1.3/oned.html
@@ -47,7 +47,7 @@
                 }
             };
             scanner.onUnduplicatedRead = (txt, result) => {
-                //alert(result.barcodeFormatString + ': ' + txt);
+                alert(result.barcodeFormatString + ': ' + txt);
             };
             await scanner.show();
         }catch(ex){
