--- a/dbrjs-express-wasm-self-host/public/index.html
+++ b/dbrjs-express-wasm-self-host/public/index.html
@@ -12,7 +12,7 @@
 <script src="dynamsoft-javascript-barcode/dist/dbr.js"></script>
 
 <script>
-
+    Dynamsoft.DBR.BarcodeReader.engineResourcePath = "dynamsoft-javascript-barcode/dist/";
     // scanner for decoding video
     let pScanner = null;
 
