--- a/test8.8.3onFrameRead.html
+++ b/test8.8.3onFrameRead.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    </head>
     <body>
         <button id="btn-show-scanner">show scanner</button>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/eruda/2.4.1/eruda.min.js"></script>
