--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -8,7 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@8.8.3/dist/dbr.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/eruda@2.4.1/eruda.min.js"></script>
   <style>
-    video {
+    .native-video {
       position: absolute;
       top: 0;
       left: 0;
@@ -21,7 +21,7 @@
 <body>
   <button>dbr</button>
   <button>native</button>
-  <video id="video" onloadedmetadata="cameraLoaded()"></video>
+  <video class="native-video" id="video" onloadedmetadata="cameraLoaded()"></video>
   <script>
     eruda.init();
     let btns = document.querySelectorAll('button')
