--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -32,6 +32,7 @@
       }
     }
     let video = document.getElementById('video');
+    console.log(video);
     function success(stream) {
       video.srcObject = stream;
       video.play();
@@ -39,6 +40,20 @@
     btns[0].addEventListener('click', ()=>{
       (async () => {
         let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
+        let bestDevice = localStorage.getItem('dynamsoft-bestDevice');
+        if(bestDevice){
+          // 2rd time will enter here
+          console.log(`it's 2rd time`)
+          scanner.dce.getAllCameras = ()=>([{deviceId:'6098c907c6e13ed0e1a25f44375355c0b00eb033017d152276c2650bb468e48d',label:'camera2 0, facing back',_checked:true}]);
+          scanner.dce.updateVideoSettings({
+            "video":{
+              "width":{"ideal":1280},"height":{"ideal":720},
+              deviceId: bestDevice
+            }
+          });
+        }else{
+          console.log(`it's 1st time`)
+        }
         scanner.onFrameRead = results => {
           if (results.length > 0) console.log(results);
         };
@@ -48,6 +63,11 @@
         let beginTime = Date.now()
         await scanner.show();
         console.log((Date.now() - beginTime) + 'ms');
+        
+        // save best device into localStorage
+        bestDevice = scanner.dce._lastDeviceId;
+        localStorage.setItem('dynamsoft-bestDevice',bestDevice);
+        console.log(`bestDevice had saved.`)
       })()
     })
     btns[1].addEventListener('click', async () => {
