--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -21,6 +21,7 @@
 <body>
   <button>dbr</button>
   <button>native</button>
+  <button>clear localStorage</button>
   <video class="native-video" id="video" onloadedmetadata="cameraLoaded()"></video>
   <script>
     eruda.init();
@@ -32,7 +33,6 @@
       }
     }
     let video = document.getElementById('video');
-    console.log(video);
     function success(stream) {
       video.srcObject = stream;
       video.play();
@@ -40,39 +40,64 @@
     btns[0].addEventListener('click', ()=>{
       (async () => {
         let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
-        let bestDevice = localStorage.getItem('dynamsoft-bestDevice');
-        if(bestDevice){
-          // 2rd time will enter here
-          console.log(`it's 2rd time`)
-          scanner.dce.getAllCameras = ()=>([{deviceId:bestDevice, label:'camera2 0, facing back',_checked:true}]);
-          scanner.dce.updateVideoSettings({
-            "video":{
-              "width":{"ideal":1280},"height":{"ideal":720},
-              deviceId: bestDevice
-            }
-          });
-        }else{
-          console.log(`it's 1st time`)
-        }
+        window.mysr = scanner;
         scanner.onFrameRead = results => {
           if (results.length > 0) console.log(results);
         };
         scanner.onUnduplicatedRead = (txt, result) => {
           alert(txt);
         };
+
+
+        let bFirst = true;
+        let bestDevice = localStorage.getItem('dynamsoft-bestDevice');
+        let _old_getAllCameras;
+
+
+        if(bestDevice){
+          // 2rd time will enter here
+          console.log(`it's 2rd time, best DeviceId is ${bestDevice}`)
+          _old_getAllCameras = scanner.dce.getAllCameras
+          scanner.dce.getAllCameras = ()=>{
+            const devices = [{deviceId: bestDevice ,label:'camera2 0, facing back',_checked:true}];
+            scanner.dce._allCameras = devices;
+            return devices;
+          };
+          scanner.dce.updateVideoSettings({
+            "video":{
+              "width":{"ideal":1280},"height":{"ideal":720},
+              deviceId: bestDevice
+            }
+          });
+          bFirst = false;
+        } else{
+          console.log(`it's 1st time`)
+        }
+
         let beginTime = Date.now()
         await scanner.show();
         console.log((Date.now() - beginTime) + 'ms');
-        
+
         // save best device into localStorage
         bestDevice = scanner.dce._lastDeviceId;
-        localStorage.setItem('dynamsoft-bestDevice',bestDevice);
-        console.log(`bestDevice had saved.`)
+        if(bestDevice){
+          localStorage.setItem('dynamsoft-bestDevice',bestDevice);
+          console.log(`bestDevice ${bestDevice} had saved.`)
+        }
+
+        if(!bFirst){
+          scanner.dce.getAllCameras = _old_getAllCameras;
+          await scanner.dce.getAllCameras();
+          scanner.dce._renderSelCameraInfo();
+        }
       })()
     })
     btns[1].addEventListener('click', async () => {
       nativeTime = Date.now()
       getUserMedia({video : {width: 480, height: 320}}, success)
+    })
+    btns[2].addEventListener('click', () => {
+      localStorage.removeItem('dynamsoft-bestDevice')
     })
     function cameraLoaded() {
       console.log((Date.now() - nativeTime) + 'ms');
