--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -71,7 +71,7 @@
       // save best device into localStorage
       bestDevice = scanner.dce._lastDeviceId;
       if(bestDevice){
-        localStorage.setItem('dynamsoft-bestDevice',bestDevice);
+        // localStorage.setItem('dynamsoft-bestDevice',bestDevice);
         console.log(`bestDevice ${bestDevice} had saved.`)
       }
 
