--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -70,9 +70,10 @@
 
       // save best device into localStorage
       bestDevice = scanner.dce._lastDeviceId;
+      console.log(bestDevice)
       if(bestDevice){
         // localStorage.setItem('dynamsoft-bestDevice',bestDevice);
-        console.log(`bestDevice ${bestDevice} had saved.`)
+        // console.log(`bestDevice ${bestDevice} had saved.`)
       }
 
       if(!bFirst){
