--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -70,11 +70,12 @@
 
       // save best device into localStorage
       bestDevice = scanner.dce._lastDeviceId;
-      console.log(bestDevice)
-      if(bestDevice){
+      localStorage.setItem('dynamsoft-bestDevice',bestDevice);
+      console.log(localStorage.getItem('dynamsoft-bestDevice'))
+      // if(bestDevice){
         // localStorage.setItem('dynamsoft-bestDevice',bestDevice);
         // console.log(`bestDevice ${bestDevice} had saved.`)
-      }
+      // }
 
       if(!bFirst){
         scanner.dce.getAllCameras = _old_getAllCameras;
