--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -56,7 +56,7 @@
           video:{
             width:{ideal:1280},
             height:{ideal:720},
-            deviceId: bestDevice
+            facingMode: "environment"
           }
         });
         console.log(scanner.dce._lastDeviceId);
