--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -59,8 +59,8 @@
             facingMode: "environment"
           }
         });
-        console.log(scanner.dce._lastDeviceId);
         bFirst = false;
+        console.log('updated')
       } else{
         console.log(`it's 1st time`)
       }
