--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -60,7 +60,7 @@
           }
         });
         bFirst = false;
-        console.log('updated')
+        console.log('updated123')
       } else{
         console.log(`it's 1st time`)
       }
