--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -48,7 +48,7 @@
         console.log(`it's 2rd time, best DeviceId is ${bestDevice}`)
         _old_getAllCameras = scanner.dce.getAllCameras
         scanner.dce.getAllCameras = ()=>{
-          const devices = [{deviceId: bestDevice ,label:'camera2 0, facing back',_checked:true}];
+          const devices = [{deviceId: 'test111' ,label:'camera2 0, facing back',_checked:true}];
           scanner.dce._allCameras = devices;
           return devices;
         };
@@ -56,7 +56,7 @@
           video:{
             width:{ideal:1280},
             height:{ideal:720},
-            facingMode: {ideal: 'environment'}
+            facingMode: 'environment'
           }
         });
         bFirst = false;
