--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -56,7 +56,8 @@
           video:{
             width:{ideal:1280},
             height:{ideal:720},
-            facingMode: 'environment'
+            // facingMode: 'environment',
+            facingMode: {ideal: 'environment'}
           }
         });
         bFirst = false;
