--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -57,7 +57,9 @@
             width:{ideal:1280},
             height:{ideal:720},
             // facingMode: 'environment',
-            facingMode: {ideal: 'environment'}
+            "facingMode": {
+              "exact": "environment"
+            },
           }
         });
         bFirst = false;
