--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -52,16 +52,16 @@
           scanner.dce._allCameras = devices;
           return devices;
         };
-        scanner.dce.updateVideoSettings({
-          video:{
-            width:{ideal:1280},
-            height:{ideal:720},
+        //scanner.dce.updateVideoSettings({
+        //  video:{
+        //    width:{ideal:1280},
+        //    height:{ideal:720},
             // facingMode: 'environment',
-            "facingMode": {
-              "exact": "environment"
-            },
-          }
-        });
+        //    "facingMode": {
+        //      "exact": "environment"
+        //    },
+        //  }
+        // });
         bFirst = false;
         console.log('updated123')
       } else{
