--- a/test-cameraloadtime.html
+++ b/test-cameraloadtime.html
@@ -47,8 +47,9 @@
         // 2rd time will enter here
         console.log(`it's 2rd time, best DeviceId is ${bestDevice}`)
         _old_getAllCameras = scanner.dce.getAllCameras
+         scanner.dce._lastDeviceId = null
          scanner.dce.getAllCameras = ()=>{
-          const devices = [{label:'camera2 0, facing back',_checked:true}];
+          const devices = [{deviceId: 'test111', label:'camera2 0, facing back',_checked:true}];
           scanner.dce._allCameras = devices;
           return devices;
         };
