--- a/4k-speed.html
+++ b/4k-speed.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <style>
+        html,body{width:100%;height:100%;display:flex;margin:0;padding:0;}
+    </style>
+</head>
 <body>
+    <div id="ui" style="width:60vw;height:100%;box-sizing:border-box;"></div>
+    <textarea id="result" style="width:40vw;height:100%;box-sizing:border-box;"></textarea>
     <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.0.0/dist/dbr.js"></script>
-  <script>
+    <script>
         // initializes and uses the library
         (async () => {
             let scanner = await Dynamsoft.DBR.BarcodeScanner.createInstance();
@@ -12,6 +18,7 @@
             };
             scanner.onUniqueRead = (txt, result) => {
                 console.log(txt);
+                document.getElementById('result').value += txt+'\n';
             };
             await scanner.updateRuntimeSettings("speed");
             let rtSettings = await scanner.getRuntimeSettings();
@@ -30,7 +37,8 @@
                     }
                 }
             });
-            await scanner.show();
+            document.getElementById('ui').appendChild(await scanner.getUIElement());
+            await scanner.open();
         })();
     </script>
 </body>
