update dbr_dlr_dce.html to use latest version; add a new sample;

--- a/dbr_dlr_dce.html
+++ b/dbr_dlr_dce.html
@@ -4,32 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DBR and DLR with DCE</title>
-  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.0.1/dist/dbr.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-label-recognizer@2.2.4/dist/dlr.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@2.3.2/dist/dce.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-javascript-barcode@9.2.12/dist/dbr.pure.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-label-recognizer@2.2.11/dist/dlr.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/dynamsoft-camera-enhancer@3.0.1/dist/dce.js"></script>
 </head>
 <body>
   <script>
+    let reader, recognizer, cameraEnhancer;
+
     (async()=>{
-      const reader = await Dynamsoft.DBR.BarcodeReader.createInstance();
+      reader = await Dynamsoft.DBR.BarcodeReader.createInstance();
       reader.onImageRead = (results)=>{
         console.log('reader results = ');
         console.log(results);
       };
       reader.onUniqueRead = txt => alert(`reader uniqueRead: ${txt}`);
 
-      const recognizer = await Dynamsoft.DLR.LabelRecognizer.createInstance();
+      recognizer = await Dynamsoft.DLR.LabelRecognizer.createInstance();
+      // recognizer.updateRuntimeSettingsFromString("mrz");
       recognizer.onImageRead = (results)=>{
         console.log('recognizer results = ');
         console.log(results);
       };
       recognizer.onUniqueRead = txt => alert(`recognizer uniqueRead: ${txt}`);
 
-      const cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance();
-      reader.setImageSource(cameraEnhancer);
-      recognizer.setImageSource(cameraEnhancer);
-      await recognizer.startScanning(true);
+      cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance();
+      await reader.setImageSource(cameraEnhancer, {resultsHighlightBaseShapes: Dynamsoft.DCE.DrawingItem});
+      await recognizer.setImageSource(cameraEnhancer, {resultsHighlightBaseShapes: Dynamsoft.DCE.DrawingItem});
       await reader.startScanning(true);
+      await recognizer.startScanning(true);
     })();
   </script>
 </body>
